@startuml

' =======================
'       ENTIDADES
' =======================

class Client {
    id
    name
    email
    password
    phone
    cartId
    role
}

class Cart {
    id
    totalProducts
    totalPrice
    user
    items
}

class CartItem {
    id
    quantity
    cartId
    product
}

class Product {
    id
    category
    name
    productDescription
    basePrice
    discountPercentage
    price
    pictureProduct
    quantity
    rating
}

class Category {
    id
    name
    description
}

class Order {
    id
    totalProducts
    totalPrice
    state
    user
    createdAt
    orderAt
    address
    items
}

class OrderItem {
    id
    quantity
    orderId
    product
}

' =======================
'      RELACIONES
' =======================

Client "1" --> "0..1" Cart : tiene

Cart "1" --> "N" CartItem : contiene
CartItem "*" --> "1" Product : referencia

Category "1" --> "N" Product : agrupa

Client "1" --> "N" Order : realiza
Order "1" --> "N" OrderItem : contiene
OrderItem "*" --> "1" Product : referencia

@enduml